# Registration

./: .env-db  .gitignore  alembic.ini  docker-compose.yml  pyproject.toml
alembic/versions/: 2024_12_21_1350-b9f47947ff8a_create_users_transactions_tables.py
core/: __init__.py  config.py
core/gunicorn_/: logs.py
core/models/: base.py  db_helper.py
core/models/mixins/: id_int_pk.py
core/schemas/: user.py
core/utils/: case_converter.py
registration_app/: .env-db  main.py  run_main.py
registration_app/alembic/: env.py
registration_app/alembic/versions/: 2024_12_28_2345-8c5cfdae5fd9_create_users_table.py
registration_app/api_v1/: __init__.py
registration_app/api_v1/auth/: crud.py  helpers.py  jwt_auth.py  validation.py  views.py
registration_app/api_v1/auth_crypto/: README.md  utils.py
registration_app/certs/: jwt-private.pem  jwt-public.pem
registration_app/core/: __init__.py  config.py
registration_app/core/gunicorn_/: __init__.py  add_options.py  application.py  logs.py
registration_app/core/models/: base.py  db_helper.py  user.py
registration_app/core/schemas/: user.py
